--- a/src/App.css
+++ b/src/App.css
@@ -30,6 +30,20 @@ body {
   line-height: 23px;
 }
 
+@media only screen and (max-width: 576px) {
+  .heading-large {
+    font-size: 24px;
+    line-height: 31px;
+  }
+  .heading-medium {
+    font-size: 18px;
+    line-height: 23px;
+  }
+  .body {
+    font-size: 16px;
+    line-height: 21px;
+  }
+}
 
 /* 
   Custom Slider
