--- a/src/App.css
+++ b/src/App.css
@@ -97,9 +97,9 @@ body {
 */
 .form-control {
   display: flex;
-  width: fit-content;
+  /* width: fit-content; */
 }
-.form-control input {
+.form-control input[type=checkbox] {
   appearance: none;
   height: 20px;
   width: 20px;
@@ -114,7 +114,16 @@ body {
 .form-control input:checked::before {
   content: url(./assets/images/icon-check.svg);
 }
-
+.form-control input[type=text] {
+  background-color: theme('colors.black');
+  color: theme('colors.white');
+  border-radius: 5px;
+  padding: 5px;
+}
+.form-control input[type=text]:focus-visible {
+  box-shadow: none;
+  outline: 3px solid theme('colors.green');
+}
 /* 
   Strength box
 */
